--- a/index.html
+++ b/index.html
@@ -16,22 +16,30 @@
             <p class="text"><span class="pay-text"> Pay Up! </span> es una aplicación web para la verificación de tarjetas de
                 crédito. <br> No almacenamos su información, con <span class="pay-text"> Pay Up! </span> siempre es
                 seguro. </p>
-            <img src="img.png" alt="" class="small">
+            <img src="img/img.png" alt="" class="small">
         </section>
         <section class="square right-side">
             <h3>Ingrese su número de tarjeta de crédito</h3>
                 <div class="flex">
-                    <input type="text" id="card-number" placeholder="ej. 0000-0000-0000-0000" max="16">
+                    <input type="text" id="card-number" placeholder="ej. 0000000000000000" maxlength="16">
                     <button id="btn-verify">Verificar</button>
                 </div>
         </section>
     </main>
+    
+    <div id="notification" class="background hide">
+        
+        <div class="content">
+            <p id="notification-close">X</p>
+            <img id="img">
+            <h1 id="main-message" class="main-text"></h1>
+            <h3 id="message"></h3>
+            <div class="buttons">  
+            </div>
+        </div>
+    </div>
 
     <script src="app.js"></script>
-
-
-
-
 
 </body>
 
